--- a/templates/question.html
+++ b/templates/question.html
@@ -16,13 +16,15 @@
         <small>Posted on: {{ question['submission_time'] }}</small>
         <hr>
     </div>
-    <div class="answers">
-        <h2>Answers:</h2>
-        {% for answer in answers %}
-        <p>{{ answer['message'] }}</p>
-        <small>Posted on: {{ answer['submission_time'] }}</small>
-        {% endfor %}
-    </div>
+    {% if answers %}
+        <div class="answers">
+            <h2>Answers:</h2>
+            {% for answer in answers %}
+            <p>{{ answer['message'] }}</p>
+            <small>Posted on: {{ answer['submission_time'] }}</small>
+            {% endfor %}
+        </div>
+    {% endif %}
 </body>
 
 </html>
