display list (work in progress)

--- a/templates/list.html
+++ b/templates/list.html
@@ -7,34 +7,19 @@
 <body> 
     <h1>List of questions</h1><br>
 
-    <!-- <a href="{{ url_for('question') }}">Add new User question</a> -->
     {% if questions %}
-        <table>
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Title</th>
-                    <th>User question</th>
-                    <th>Acceptance criteria</th>
-                    <th>Business value</th>
-                    <th>Estimation</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for question in questions %}
-                    <tr>
-                            <td>{{ question['id']|safe }}</td>
-                            <td><a href="{{ url }}">{{ question['title']|safe }}</a></td>
-                            <td>{{ question['user_question']|safe }}</td>
-                            <td>{{ question['acceptance_criteria']|safe }}</td>
-                            <td>{{ question['business_value']|safe }}</td>
-                            <td>{{ question['estimation']|safe }}</td>
-                            <td>{{ question['status']|safe }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table> {% else %}
+        {% for question in questions %}
+        <!--id,submission_time,view_number,vote_number,title,message,image-->
+        <h2>{{question["title"]}}</h2>
+        <h3>{{question["message"]}}</h3>
+        <p>{{question["image"]}}</p> 
+        <p>Submission time: {{question["submission_time"]}}</p>
+        <p>View number: {{question["view_number"]}} Vote number: {{question["vote_number"]}} </p><br>
+        
+
+
+        {% endfor %}
+        {% else %}
         <p>There are no questions</p>
     {% endif %}
 </body>
