--- a/templates/question.html
+++ b/templates/question.html
@@ -25,6 +25,10 @@
             {% endfor %}
         </div>
     {% endif %}
+
+    <form action="/list">
+        <input type="submit" value="Return to home" />
+    </form>
 </body>
 
 </html>
