--- a/templates/question-template.html
+++ b/templates/question-template.html
@@ -33,6 +33,13 @@
     <form action="/list">
         <input type="submit" value="Return to home" />
     </form>
+
+    <br>
+
+    <form action="/question/{{ question['id'] }}/delete">
+        <input type="submit" value="Delete a question" />
+    </form>
+
 </body>
 
 </html>
