--- a/templates/ask-question.html
+++ b/templates/ask-question.html
@@ -6,7 +6,7 @@
 </head>
 <body> 
     <h1>Ask a question</h1><br>
-    <form action="/ask-question">
+    <form action="/ask-question" method="post">
         Title <input name="title" required><br>
         <label>Question:</label><br>
         <textarea name="message" rows="20" cols="60" placeholder="Insert a question" required></textarea><br>
