Add edit button to question details page

--- a/templates/ask-question.html
+++ b/templates/ask-question.html
@@ -6,7 +6,7 @@
 </head>
 <body> 
     <h1>Ask a question</h1><br>
-    <form action="/ask-question" method="post">
+    <form action="{{ action|default('/ask-question') }}" method="post">
         Title <input name="title" value="{% block question_title %}{% endblock %}" required><br>
         <label>Question:</label><br>
         <textarea name="message" rows="20" cols="60" placeholder="Insert a question" required>{% block question_body %}{% endblock %}</textarea><br>
