--- a/templates/question-template.html
+++ b/templates/question-template.html
@@ -12,17 +12,17 @@
         {{ show_question(question) }}
     </div>
     {% if answers %}
-        <div class="answers">
-            <h2>Answers:</h2>
-            {% for answer in answers %}
-            <p>{{ answer['message'] }}</p>
-            <small>Posted on: {{ answer['submission_time'] }}</small>
-            {% endfor %}
-        </div>
+    <div class="answers">
+        <h2>Answers:</h2>
+        {% for answer in answers %}
+        <p>{{ answer['message'] }}</p>
+        <small>Posted on: {{ answer['submission_time'] }}</small>
+        {% endfor %}
+    </div>
     {% endif %}
 
     <br>
-    
+
 
     <form action="/question/{{ question['id'] }}/new-answer">
         <input type="submit" value="Add new answer" />
@@ -39,6 +39,12 @@
 
     <form action="/question/{{ question['id'] }}/delete">
         <input type="submit" value="Delete a question" />
+    </form>
+
+    <br>
+
+    <form action="/question/{{ question['id'] }}/edit">
+        <input type="submit" value="Edit a question" />
     </form>
 
 </body>
