--- a/templates/question-template.html
+++ b/templates/question-template.html
@@ -16,7 +16,10 @@
         <h2>Answers:</h2>
         {% for answer in answers %}
         <p>{{ answer['message'] }}</p>
-        <small>Posted on: {{ answer['submission_time'] }}</small>
+        <small>Posted on: {{ answer['submission_time'] }}</small><br>
+        <form action="/answer/{{ answer['id'] }}/delete">
+            <input type="submit" value="Delete the answer" />
+        </form><br>
         {% endfor %}
     </div>
     {% endif %}
