Vote numbers are displayed on the question list page

--- a/templates/list.html
+++ b/templates/list.html
@@ -37,6 +37,11 @@
         {% for question in questions %}
         <!--id,submission_time,view_number,vote_number,title,message,image-->
         <h2><a href="/question/{{question['id']}}">{{question["title"]}}</a></h2>
+        <div>
+            <a href="/question/{{question['id']}}/vote-up"> UP </a> 
+            {{ question['vote_number'] }}
+            <a href="/question/{{question['id']}}/vote-down"> DOWN </a>
+        </div>
         <h3>{{question["message"]}}</h3>
         <p>{{question["image"]}}</p> 
         <p>Submission time: {{question["submission_time"]}}</p>
