--- a/templates/answer-question.html
+++ b/templates/answer-question.html
@@ -8,9 +8,11 @@
     {%- from "question.html" import show_question %}
     {{ show_question(question) }}
     <h1>Answer a question</h1><br>
-    <form action="/question/{{ question['id'] }}/new-answer" method="post">
+    <form action="/question/{{ question['id'] }}/new-answer" method="post" enctype="multipart/form-data">
         <label>Answer:</label><br>
         <textarea name="message" rows="20" cols="60" placeholder="Insert an answer" required></textarea><br>
+        <label for="image">Upload image:</label>
+        <input name="image" type="file" accept="image/png, image/jpeg">
         <button type="submit">Submit my answer</button>
     </form>
 </body>
