--- a/templates/question-template.html
+++ b/templates/question-template.html
@@ -16,6 +16,13 @@
         <h2>Answers:</h2>
         {% for answer in answers %}
         <p>{{ answer['message'] }}</p>
+
+        <div>
+            <a href="/answer/{{answer['id']}}/vote-up"> UP </a> 
+            {{ answer['vote_number'] }}
+            <a href="/answer/{{answer['id']}}/vote-down"> DOWN </a>
+        </div>
+        <br>
         <small>Posted on: {{ answer['submission_time'] }}</small><br>
         <form action="/answer/{{ answer['id'] }}/delete">
             <input type="submit" value="Delete the answer" />
