--- a/templates/question-template.html
+++ b/templates/question-template.html
@@ -22,9 +22,13 @@
                 <br>
             {% endif %}
             <div>
-                <a href="/answer/{{answer['id']}}/vote-up"> UP </a> 
+              <form action="/answer/{{  answer['id'] }}/vote-up" method="post">
+                <button type="submit">UP</button>
+              </form>
                 {{ answer['vote_number'] }}
-                <a href="/answer/{{answer['id']}}/vote-down"> DOWN </a>
+              <form action="/answer/{{  answer['id'] }}/vote-down" method="post">
+                <button type="submit">DOWN</button>
+              </form>
             </div>
             <small>Posted on: {{ answer['submission_time'] }}</small><br>
             <form action="/answer/{{ answer['id'] }}/delete" method="post">
