add tag link to question page

--- a/templates/question.html
+++ b/templates/question.html
@@ -1,6 +1,9 @@
 {% macro show_question(question) %}
         <h2>Question:</h2>
         <h3>{{ question['title'] }}</h3>
+        <div id="tag">
+            <a href="/question/{{ question['id'] }}/new-tag">Add a tag</a>
+        </div>
         {% if question['image'] %}
         {% set url=url_for('static', filename=question['image']) %}
             <img src="{{ url }}" width="100">
