Add, edit and delete comments

--- a/templates/edit-question.html
+++ b/templates/edit-question.html
@@ -1,3 +1,4 @@
 {% extends "ask-question.html" %}
+{% block title %}Ask-mate - edit question{% endblock %}
 {% block question_title %}{{ question['title'] }}{% endblock %}
 {% block question_body %}{{ question['message'] }}{% endblock %}
