shwowing added tags

--- a/templates/question.html
+++ b/templates/question.html
@@ -1,8 +1,13 @@
-{% macro show_question(question) %}
+{% macro show_question(question, current_tags, question_id) %}
         <h2>Question:</h2>
         <h3>{{ question['title'] }}</h3>
         <div id="tag">
             <a href="/question/{{ question['id'] }}/new-tag">Add a tag</a>
+            {% for tags in current_tags %}
+                {% if tags['id'] == question_id %}
+                    {{ tags['name'] }}<a href="/question/{{ question_id }}/tag/{{ tags['id'] }}/delete">x </a>
+                {% endif %}
+            {% endfor %}
         </div>
         {% if question['image'] %}
         {% set url=url_for('static', filename=question['image']) %}
