fixed return from new tag

--- a/templates/question-new-tag.html
+++ b/templates/question-new-tag.html
@@ -14,6 +14,6 @@
         {% endfor %}
         <button id="tags-name" name="tags-name" type="submit">Add</button>
     </form>
-    <button><a href="/">Return</a></button>
+    <button><a href="/question/{{ id }}">Return</a></button>
 </body>
 </html>
