fixed None tags while adding a new tag

--- a/templates/question.html
+++ b/templates/question.html
@@ -5,7 +5,7 @@
             <a href="/question/{{ question['id'] }}/new-tag">Add a tag</a>
             {% for tags in current_tags %}
                 {% if tags['question_id'] == question_id %}
-                    {{ tags['name'] }}<a href="/question/{{ question_id }}/tag/{{ tags['id'] }}/delete">x </a>
+                    {{ tags['name'] }}<a href="/question/{{ question_id }}/tag/{{ tags['name'] }}/delete">x </a>
                 {% endif %}
             {% endfor %}
         </div>
