search ready before SQL query

--- a/templates/list.html
+++ b/templates/list.html
@@ -12,6 +12,11 @@
 </head>
 <body> 
 
+    <form action="/search">
+        <input type="search" id="site-search" name="q" placeholder="Search the site...">
+        <button>Search</button>
+    </form>
+
     <h3>Choose sorting options</h3>
     <form action="/list">
         <select name="order_by">
